About section was invisible, and the links were still clickable. This is no longer the case

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -88,10 +88,12 @@ footer {
     &:focus {
       .tooltip {
         opacity: 1;
+        display: block;
       }
     }
 
     .tooltip {
+      display: none;
       top: -76px;
       width: 130px;
 
